building the dashboard website

--- a/ZoomCamp/Project2/notebooks/twitter.ipynb
+++ b/ZoomCamp/Project2/notebooks/twitter.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,16 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = response('worldcup')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -489,147 +480,147 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1425814679062867970</td>\n",
-       "      <td>RING MY LINE🇧🇷❤️</td>\n",
-       "      <td>4877</td>\n",
-       "      <td>44590</td>\n",
-       "      <td>God’s Favor is The Key</td>\n",
-       "      <td>La Liga over WorldCup Anyday. Tswwww</td>\n",
-       "      <td>2022-11-29 19:03:07+00:00</td>\n",
+       "      <td>632914972</td>\n",
+       "      <td>David James</td>\n",
+       "      <td>152003</td>\n",
+       "      <td>15892</td>\n",
+       "      <td>None</td>\n",
+       "      <td>This is the 22nd football WorldCup finals. In ...</td>\n",
+       "      <td>2022-12-13 14:33:34+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>185932053</td>\n",
-       "      <td>SK 🇬🇧🇬🇧</td>\n",
-       "      <td>15292</td>\n",
-       "      <td>54113</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>I hope politics is not involved in tonight’s w...</td>\n",
-       "      <td>2022-11-29 19:01:23+00:00</td>\n",
+       "      <td>1282724911388045314</td>\n",
+       "      <td>vedbajoria</td>\n",
+       "      <td>497</td>\n",
+       "      <td>2137</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ive never been into football but this worldcup...</td>\n",
+       "      <td>2022-12-13 14:32:07+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1566163985820356608</td>\n",
-       "      <td>kus emek</td>\n",
-       "      <td>102</td>\n",
-       "      <td>2738</td>\n",
-       "      <td>The 69 palace of fine arts</td>\n",
-       "      <td>You never realize how many persian ppl you kno...</td>\n",
-       "      <td>2022-11-29 18:59:45+00:00</td>\n",
+       "      <td>282588960</td>\n",
+       "      <td>FRIDAY LAWANI ●</td>\n",
+       "      <td>7470</td>\n",
+       "      <td>98280</td>\n",
+       "      <td>Abuja, Nigeria</td>\n",
+       "      <td>I'm a Ronaldo fan, but if Messi carries this w...</td>\n",
+       "      <td>2022-12-13 14:25:34+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>299575864</td>\n",
-       "      <td>EzeImo👑</td>\n",
-       "      <td>10800</td>\n",
-       "      <td>186327</td>\n",
-       "      <td>Lat 5.476310, Long 7.025853 “</td>\n",
-       "      <td>If life is treating you unfairly just remember...</td>\n",
-       "      <td>2022-11-29 18:56:35+00:00</td>\n",
+       "      <td>1375533560849956866</td>\n",
+       "      <td>Eltoro2</td>\n",
+       "      <td>189</td>\n",
+       "      <td>1248</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Worldcup Supa exciting today ⚽</td>\n",
+       "      <td>2022-12-13 14:13:29+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>767386253306261505</td>\n",
-       "      <td>Major Gainz</td>\n",
-       "      <td>5132</td>\n",
-       "      <td>9006</td>\n",
+       "      <td>1296774526756429824</td>\n",
+       "      <td>G</td>\n",
+       "      <td>694</td>\n",
+       "      <td>24558</td>\n",
        "      <td>None</td>\n",
-       "      <td>$Drcr With the WorldCup in full force \\nI expe...</td>\n",
-       "      <td>2022-11-29 18:55:49+00:00</td>\n",
+       "      <td>Acuna not playing today is a big big big miss ...</td>\n",
+       "      <td>2022-12-13 14:13:15+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>306168820</td>\n",
-       "      <td>Att</td>\n",
-       "      <td>1363</td>\n",
-       "      <td>85686</td>\n",
-       "      <td>🇵🇰</td>\n",
-       "      <td>Worldcup song.</td>\n",
-       "      <td>2022-11-29 18:55:37+00:00</td>\n",
+       "      <td>999994012319862787</td>\n",
+       "      <td>Cyril GRUGNAC</td>\n",
+       "      <td>2042</td>\n",
+       "      <td>105067</td>\n",
+       "      <td>Location ? De véhicule.</td>\n",
+       "      <td>vive le Qatar Act !\\nNo boycott worldcup</td>\n",
+       "      <td>2022-12-13 14:12:29+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1325537708807090177</td>\n",
-       "      <td>YoonMia⁷ 🌊 ᴵⁿᵈᶦᵍᵒ | ᵐᶦˡᶦᵗᵃʳʸ ʷᶦᶠᵉ</td>\n",
-       "      <td>290</td>\n",
-       "      <td>19458</td>\n",
-       "      <td>Boraville</td>\n",
-       "      <td>Oh it's ww3 on worldcup tonight</td>\n",
-       "      <td>2022-11-29 18:53:44+00:00</td>\n",
+       "      <td>986401130</td>\n",
+       "      <td>BaS</td>\n",
+       "      <td>368</td>\n",
+       "      <td>11338</td>\n",
+       "      <td>Republic of the Philippines</td>\n",
+       "      <td>Morocco probably has the biggest fanbase in wo...</td>\n",
+       "      <td>2022-12-13 14:02:04+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1511015785103249411</td>\n",
-       "      <td>Husnain Goheer</td>\n",
-       "      <td>195</td>\n",
-       "      <td>960</td>\n",
-       "      <td>Islamabad, Pakistan</td>\n",
-       "      <td>My friend is in Qatar watching Worldcup absolu...</td>\n",
-       "      <td>2022-11-29 18:46:55+00:00</td>\n",
+       "      <td>962062969</td>\n",
+       "      <td>$oosick</td>\n",
+       "      <td>2195</td>\n",
+       "      <td>92590</td>\n",
+       "      <td>37.0902° N, 95.7129° W</td>\n",
+       "      <td>Watch them hand this worldcup to Messi. Argent...</td>\n",
+       "      <td>2022-12-13 14:01:42+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>843381512712142848</td>\n",
-       "      <td>Obel Apollo</td>\n",
-       "      <td>186</td>\n",
-       "      <td>2111</td>\n",
-       "      <td>Kampala, Uganda</td>\n",
-       "      <td>For the first time 3 African countries may pro...</td>\n",
-       "      <td>2022-11-29 18:40:58+00:00</td>\n",
+       "      <td>1566562040935632896</td>\n",
+       "      <td>WA aja, dm gak masuk🙏🏻</td>\n",
+       "      <td>4</td>\n",
+       "      <td>401</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mulai dari Spotify, Disney, Netflix, Youtube, ...</td>\n",
+       "      <td>2022-12-13 14:00:44+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>1083304985243217920</td>\n",
-       "      <td>🄲🄱🄰❤🄿🄳🄻</td>\n",
-       "      <td>12845</td>\n",
-       "      <td>46390</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Just in: Senegal wins a thriller match against...</td>\n",
-       "      <td>2022-11-29 18:39:23+00:00</td>\n",
+       "      <td>933675513620529153</td>\n",
+       "      <td>a</td>\n",
+       "      <td>485</td>\n",
+       "      <td>43253</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>esok ada presentation tender but sorry worldcu...</td>\n",
+       "      <td>2022-12-13 14:00:40+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             author_id                           username  author_followers  \\\n",
-       "0  1425814679062867970                   RING MY LINE🇧🇷❤️              4877   \n",
-       "1            185932053                            SK 🇬🇧🇬🇧             15292   \n",
-       "2  1566163985820356608                           kus emek               102   \n",
-       "3            299575864                            EzeImo👑             10800   \n",
-       "4   767386253306261505                        Major Gainz              5132   \n",
-       "5            306168820                                Att              1363   \n",
-       "6  1325537708807090177  YoonMia⁷ 🌊 ᴵⁿᵈᶦᵍᵒ | ᵐᶦˡᶦᵗᵃʳʸ ʷᶦᶠᵉ               290   \n",
-       "7  1511015785103249411                     Husnain Goheer               195   \n",
-       "8   843381512712142848                        Obel Apollo               186   \n",
-       "9  1083304985243217920                            🄲🄱🄰❤🄿🄳🄻             12845   \n",
+       "             author_id                username  author_followers  \\\n",
+       "0            632914972             David James            152003   \n",
+       "1  1282724911388045314              vedbajoria               497   \n",
+       "2            282588960         FRIDAY LAWANI ●              7470   \n",
+       "3  1375533560849956866                 Eltoro2               189   \n",
+       "4  1296774526756429824                       G               694   \n",
+       "5   999994012319862787           Cyril GRUGNAC              2042   \n",
+       "6            986401130                     BaS               368   \n",
+       "7            962062969                 $oosick              2195   \n",
+       "8  1566562040935632896  WA aja, dm gak masuk🙏🏻                 4   \n",
+       "9   933675513620529153                       a               485   \n",
        "\n",
-       "   author_tweets                author_location  \\\n",
-       "0          44590         God’s Favor is The Key   \n",
-       "1          54113                 United Kingdom   \n",
-       "2           2738     The 69 palace of fine arts   \n",
-       "3         186327  Lat 5.476310, Long 7.025853 “   \n",
-       "4           9006                           None   \n",
-       "5          85686                             🇵🇰   \n",
-       "6          19458                     Boraville    \n",
-       "7            960            Islamabad, Pakistan   \n",
-       "8           2111                Kampala, Uganda   \n",
-       "9          46390                           None   \n",
+       "   author_tweets              author_location  \\\n",
+       "0          15892                         None   \n",
+       "1           2137                         None   \n",
+       "2          98280               Abuja, Nigeria   \n",
+       "3           1248                         None   \n",
+       "4          24558                         None   \n",
+       "5         105067      Location ? De véhicule.   \n",
+       "6          11338  Republic of the Philippines   \n",
+       "7          92590       37.0902° N, 95.7129° W   \n",
+       "8            401                         None   \n",
+       "9          43253               United Kingdom   \n",
        "\n",
        "                                                text                created_at  \n",
-       "0               La Liga over WorldCup Anyday. Tswwww 2022-11-29 19:03:07+00:00  \n",
-       "1  I hope politics is not involved in tonight’s w... 2022-11-29 19:01:23+00:00  \n",
-       "2  You never realize how many persian ppl you kno... 2022-11-29 18:59:45+00:00  \n",
-       "3  If life is treating you unfairly just remember... 2022-11-29 18:56:35+00:00  \n",
-       "4  $Drcr With the WorldCup in full force \\nI expe... 2022-11-29 18:55:49+00:00  \n",
-       "5                                     Worldcup song. 2022-11-29 18:55:37+00:00  \n",
-       "6                    Oh it's ww3 on worldcup tonight 2022-11-29 18:53:44+00:00  \n",
-       "7  My friend is in Qatar watching Worldcup absolu... 2022-11-29 18:46:55+00:00  \n",
-       "8  For the first time 3 African countries may pro... 2022-11-29 18:40:58+00:00  \n",
-       "9  Just in: Senegal wins a thriller match against... 2022-11-29 18:39:23+00:00  "
+       "0  This is the 22nd football WorldCup finals. In ... 2022-12-13 14:33:34+00:00  \n",
+       "1  ive never been into football but this worldcup... 2022-12-13 14:32:07+00:00  \n",
+       "2  I'm a Ronaldo fan, but if Messi carries this w... 2022-12-13 14:25:34+00:00  \n",
+       "3                     Worldcup Supa exciting today ⚽ 2022-12-13 14:13:29+00:00  \n",
+       "4  Acuna not playing today is a big big big miss ... 2022-12-13 14:13:15+00:00  \n",
+       "5           vive le Qatar Act !\\nNo boycott worldcup 2022-12-13 14:12:29+00:00  \n",
+       "6  Morocco probably has the biggest fanbase in wo... 2022-12-13 14:02:04+00:00  \n",
+       "7  Watch them hand this worldcup to Messi. Argent... 2022-12-13 14:01:42+00:00  \n",
+       "8  Mulai dari Spotify, Disney, Netflix, Youtube, ... 2022-12-13 14:00:44+00:00  \n",
+       "9  esok ada presentation tender but sorry worldcu... 2022-12-13 14:00:40+00:00  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,6 +1749,44 @@
    "source": [
     "df = response('AAPL')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath(os.getcwd()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/c/Users/Abdulkadir/Documents/GitHub/DataPortfolio/ZoomCamp/Project2/notebooks'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
